--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@react-spring/parallax": "9.0.0-canary.808.8.4a87fcb",
     "dotenv": "^10.0.0",
+    "embla-carousel-react": "^8.0.4",
     "firebase": "^9.1.3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
+    "react-device-detect": "^2.2.3",
     "react-dom": "17.0.2",
+    "react-grid-gallery": "^1.0.1-alpha.0",
+    "react-image-lightbox": "^5.1.4",
     "react-intersection-observer": "^8.32.2",
     "react-scroll-parallax": "^2.4.0",
     "react-spring": "^9.3.0",
